--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
-            cd /path/to/your/app
+            cd /var/www/my-python-project/my-python-project
             git pull origin main
-            systemctl restart your-app.service
+            systemctl restart main.service
 
