--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: my-python-project 
+name: my-python-project
 
 on:
   push:
@@ -18,8 +18,10 @@ jobs:
         with:
           python-version: 3.x
 
-      - name: Install Dependencies
-        run: pip install -r requirements.txt
+      - name: Install Flask and Gunicorn
+        run: |
+          pip install flask
+          pip install gunicorn
 
       - name: Build and Test
         run: python -m unittest discover
@@ -33,5 +35,9 @@ jobs:
           script: |
             cd /var/www/my-python-project
             git pull origin main
-            systemctl restart flaskapp.service
 
+            # Restart Gunicorn
+            systemctl restart gunicorn.service
+
+            # Reload Nginx to pick up changes in the Nginx config
+            systemctl reload nginx.service
