--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-fastapi==0.85.1
-pydantic==1.10.2
-fastapi-utils==0.32.6
+Flask==2.1.0
 python-dotenv==0.21.0
-sqlalchemy==1.4.42
-uvicorn==0.19.0
 gunicorn==20.1.0
